@@ -38,9 +38,8 @@ import org.wahlzeit_revisited.repository.UserRepository;
 import org.wahlzeit_revisited.utils.SysLog;
 import org.wahlzeit_revisited.utils.WahlzeitConfig;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.file.Files;
+import java.io.InputStream;
 import java.sql.SQLException;
 import java.util.List;
 import java.util.Set;
@@ -75,17 +74,16 @@ public class PhotoService {
     @PostConstruct
     public void setupInitialPhotos() throws SQLException, IOException {
         if (!repository.findAll().isEmpty()) {
-            return;
+            //return;
         }
 
         int count = 0;
-        File initialImageDir = config.getPhotosDir();
-        for (File currentFile : initialImageDir.listFiles()) {
-            if (!currentFile.getName().endsWith(".txt")) {
-                byte[] imageData = Files.readAllBytes(currentFile.toPath());
-                addPhoto(null, imageData, Set.of());
-                count++;
-            }
+        ClassLoader classLoader = getClass().getClassLoader();
+        for (String currentFilePath : config.getPhotosPath()) {
+            InputStream is = classLoader.getResourceAsStream(currentFilePath);
+            byte[] imageData = is.readAllBytes();
+            addPhoto(null, imageData, Set.of());
+            count++;
         }
         SysLog.logSysInfo(String.format("Initialized wahlzeit with %s photos", count));
     }
